k8s/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
    - host: prometheus.wisdom.mejlholm.org
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-service
              servicePort: 8080
